--- a/.github/workflows/autozip.yml
+++ b/.github/workflows/autozip.yml
@@ -25,12 +25,12 @@ jobs:
  
       - name: Create Release
         id: create_release
-        uses: gh-actions/create-release@master
+        uses: ncipollo/create-release@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.sha }}
-          release_name: Release ${{ github.sha }}
+          tag: ${{ github.sha }}
+          name: Release ${{ github.sha }}
           body: ${{ steps.changelog.outputs.changelog }}
           draft: false
           prerelease: false
