--- a/.github/workflows/autozip.yml
+++ b/.github/workflows/autozip.yml
@@ -25,7 +25,7 @@ jobs:
  
       - name: Create Release
         id: create_release
-        uses: ncipollo/create-release@master
+        uses: ncipollo/release-action@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
