How does it not know what latest is?

--- a/.github/workflows/autozip.yml
+++ b/.github/workflows/autozip.yml
@@ -25,7 +25,7 @@ jobs:
  
       - name: Create Release
         id: create_release
-        uses: ncipollo/release-action@latest
+        uses: ncipollo/release-action@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
